5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1709_3069.log
== TEST (2019-05-02 10:34:20) 
-- CODE:
x = input("Digite aqui o nome do ataque realizado pela Banshee: ").upper()
d1 = int(input("Digite aqui os valores sorteados em cada um dos dois dados: "))
d2 = int (input("Digite aqui os valores sorteados em cada um dos dois dados: "))
calf = 10 + (d1 + d2)
calg = 6 + (d1 + d2)
calt = (d1 + d2) ** 2
if (x != "FURIA") and (x != "GRITO") and (x != "TOQUE") or (y < 1) and (y > 8):
	total = "Entrada invalida"
else:
	if (x == "FURIA"):
	total = calf
	elif (x == "GRITO"):
	total = calg
	else:
	total = calt
print(total)

	
-- ERROR:
File "XXXX", line 11
    total = calf
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:34:38) 
-- CODE:
x = input("Digite aqui o nome do ataque realizado pela Banshee: ").upper()
d1 = int(input("Digite aqui os valores sorteados em cada um dos dois dados: "))
d2 = int (input("Digite aqui os valores sorteados em cada um dos dois dados: "))
calf = 10 + (d1 + d2)
calg = 6 + (d1 + d2)
calt = (d1 + d2) ** 2
if (x != "FURIA") and (x != "GRITO") and (x != "TOQUE") or (y < 1) and (y > 8):
	total = "Entrada invalida"
else:
	if (x == "FURIA"):
		total = calf
	elif (x == "GRITO"):
		total = calg
	else:
		total = calt
print(total)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (x != "FURIA") and (x != "GRITO") and (x != "TOQUE") or (y < 1) and (y > 8):
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:36:52) 
-- CODE:
x = input("Digite aqui o nome do ataque realizado pela Banshee: ").upper()
d1 = int(input("Digite aqui os valores sorteados em cada um dos dois dados: "))
d2 = int (input("Digite aqui os valores sorteados em cada um dos dois dados: "))
calf = 10 + (d1 + d2)
calg = 6 + (d1 + d2)
calt = (d1 + d2) ** 2
if (x != "FURIA") and (x != "GRITO") and (x != "TOQUE") or (d1 < 1) and (d2 > 8) or (d2 < 1) and (d1 > 8):
	total = "Entrada invalida"
else:
	if (x == "FURIA"):
		total = calf
	elif (x == "GRITO"):
		total = calg
	else:
		total = calt
print(total)

	
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:37:09) 
-- CODE:
x = input("Digite aqui o nome do ataque realizado pela Banshee: ").upper()
d1 = int(input("Digite aqui os valores sorteados em cada um dos dois dados: "))
d2 = int (input("Digite aqui os valores sorteados em cada um dos dois dados: "))
calf = 10 + (d1 + d2)
calg = 6 + (d1 + d2)
calt = (d1 + d2) ** 2
if (x != "FURIA") and (x != "GRITO") and (x != "TOQUE") or (d1 < 1) and (d2 > 8) or (d2 < 1) and (d1 > 8):
	total = "Entrada invalida"
else:
	if (x == "FURIA"):
		total = calf
	elif (x == "GRITO"):
		total = calg
	else:
		total = calt
print(total)

	
-- EXECUTION TIME:
0.189035
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:37:18) 
-- CODE:
x = input("Digite aqui o nome do ataque realizado pela Banshee: ").upper()
d1 = int(input("Digite aqui os valores sorteados em cada um dos dois dados: "))
d2 = int (input("Digite aqui os valores sorteados em cada um dos dois dados: "))
calf = 10 + (d1 + d2)
calg = 6 + (d1 + d2)
calt = (d1 + d2) ** 2
if (x != "FURIA") and (x != "GRITO") and (x != "TOQUE") or (d1 < 1) and (d2 > 8) or (d2 < 1) and (d1 > 8):
	total = "Entrada invalida"
else:
	if (x == "FURIA"):
		total = calf
	elif (x == "GRITO"):
		total = calg
	else:
		total = calt
print(total)

	
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
